# RouteWars

./: .gitignore  README.md  load_test_setup.sh  nfqueue_test.zig  router_monitor.py
benchmark/: benchmark.sh  cleanup.sh  control_namespace_setup.sh  extract_outputs.py  namespace_setup.sh  queries.txt
c/: nfq_accept_all.c  nfqueue_accept_all.c
go/: dns.go  go.mod  go.sum  nfq_accept_all.go  nfq_accept_all_qname.go  nfq_dns_filter.go  nfq_dns_filter_worker_threads.go  nfq_thread_everything.go  nfq_worker_threads.go
go/logger/: log.go  log_io_logging.go  log_io_prints.go  log_no_io.go
results/: RouteWars.csv  RouteWars.xlsx  accept_all_maximum_concurrency_average.csv  accept_all_sequential_average.csv  accept_all_worker_threads_average.csv  dns_filter_sequential_average.csv  dns_filter_worker_threads_average.csv
rust/: Cargo.toml
rust/src/: accept_all.rs  accept_all_qname.rs  dns.rs  dns_filter.rs  dns_filter_noio.rs  dns_filter_worker_threads.rs  main.rs  thread_everything.rs  worker_threads.rs
zig/: build.zig  dns  dns.zig  nfq_accept_all_qname.zig  nfqueue_minimal.zig  nfqueue_minimal_qname.zig  nfqueue_test.zig  nfqueue_test2.zig  qname.zig  zig.md
zig/src/: dns.zig  logger.zig  nfq_accept_all.zig  nfq_accept_all_qname  nfq_accept_all_qname.zig  nfq_dns_filter  nfq_dns_filter.zig  nfq_dns_filter_blocklistfile.zig  nfq_dns_filter_worker_threads.zig  nfq_thread_everything.zig  nfq_worker_and_receiver_threads.zig  nfq_worker_threads.zig  nfq_worker_threads_batch.zig
