[package]
name = "nfq_rust_router"
version = "0.1.0"
edition = "2024"

[dependencies]
nfq = "0.2.5"
pnet = "0.35.0"
simple-dns = "0.10.0"

[[bin]]
name = "accept_all"
path = "src/accept_all.rs"

[[bin]]
name = "accept_all_qname"
path = "src/accept_all_qname.rs"

[[bin]]
name = "dns_filter"
path = "src/dns_filter.rs"

[[bin]]
name = "dns_filter_noio"
path = "src/dns_filter_noio.rs"
